@@ -6,6 +6,8 @@ ChangeLog
 
 GIT HEAD
 
+- Fixed some ages old Glide/portamento potential crash bug
+  (reported by AnClark GH#17, thanks). (EXPERIMENTAL)
 - Sustenuto pedal controller (MIDI CC#66) is now implemented.
   (EXPERIMENTAL)
 - Have some tolerance for buffer-size changes. (EXPERIMENTAL)
